@@ -154,6 +154,7 @@ typedef struct exp_instruction {
                 struct exp_instruction *di;
                 NODE *(*fptr) P((int));
                 long dl;
+                unsigned long long ldl;
                 char *name;
         } d;
 
@@ -251,7 +252,7 @@ typedef struct exp_instruction {
 /*------------------ pretty printing/profiling --------*/
 
 /* Op_exec_count */
-#define exec_count      d.dl
+#define exec_count      d.ldl
 
 /* Op_K_while */
 #define while_body      d.di
