@@ -1,3 +1,8 @@
+2020-06-10         Andrew J. Schorr      <aschorr@telemetry-investments.com>
+
+	* bc_notes: Add new field `unsigned long long ldl' to INSTRUCTION,
+	and update the definition of exec_count.
+
 2020-06-09         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in (Implementation Limits): Update the table to be more
